--- a/report2.tex
+++ b/report2.tex
@@ -137,16 +137,49 @@ Se registraron las imágenes y las distancias donde se observaron,
 
 Distancia de Talbot: 
 
-Periodo: 
+\begin{table}[h] % h indica que queremos posicionar la tabla Here
+        \centering
+        \begin{tabular}{|c|c|}
+            \hline
+            Distancia Imagen distribución de intensidad semejante & Distancia Imagen es semejante a la imagen original\\
+            \hline
+            18cm & 35,7cm\\
+            \hline
+            54cm & 73cm \\
+            \hline
+        \end{tabular}
+        \caption{Distancias de Talbot}
+        \label{tab:dtalbot}
+    \end{table}
+Periodo de la red:
+d=\sqrt{\flatfrac{Z * \lambda}{2}}
+Cuando una onda plana incide sobre una red de difracción periódica, la imagen de la red se repite a distancias regulares lejos del plano de la misma
 
-¿Las imágenes siempre son periódicas?
+\begin{table}[h] % h indica que queremos posicionar la tabla Here
+        \centering
+        \begin{tabular}{|c|c|}
+            \hline
+            Periodo Imagen distribución de intensidad semejante & Periodo Imagen es semejante a la imagen original\\
+            \hline
+            0.023cm & 0.34cm\\
+            \hline
+            0.41cm & 0,48cm \\
+            \hline
+        \end{tabular}
+        \caption{Distancias de Talbot}
+        \label{tab:dtalbot}
+    \end{table}
 
 CUESTIONES:
 \begin{enumerate}
 \item Representando una señal óptica periódica (longitud de onda $\lambda$, periodo $d$) como una serie de Fourier, demostrar analíticamente que en las distancias iguales a la mitad de la distancia de Talbot, $z=\flatfrac{ZT}{2}$, observamos el objeto original desplazado en la mitad del periodo $d$.
+
 \item Usando las ecs. (7)-(8) analizar la intensidad y la fase del campo difractado por un objeto periódico compuesto de líneas blancas (transparentes) y negras (opacas) alternadas de la misma anchura, a una distancia $z=\flatfrac{ZT}{4}$
+
 \item Justifique el procedimiento seguido para determinar la distancia de Talbot y el periodo de la red y exponga los resultados.
+
 \item ¿Las imágenes observadas siempre son periódicos? \\¿La respuesta está de acuerdo con la teoría?
+A distancias mayores a las de talbot mencionadas aparecen otras autoimágenes que no conservan su periodicidad axial.
 \end{enumerate}
 
 \subsection{Observación del espectro de Fourier}
