--- a/report2.tex
+++ b/report2.tex
@@ -173,12 +173,12 @@ Cuando una onda plana incide sobre una red de difracción periódica, la imagen 
 CUESTIONES:
 \begin{enumerate}
 \item Representando una señal óptica periódica (longitud de onda $\lambda$, periodo $d$) como una serie de Fourier, demostrar analíticamente que en las distancias iguales a la mitad de la distancia de Talbot, $z=\flatfrac{ZT}{2}$, observamos el objeto original desplazado en la mitad del periodo $d$.
-
+A la mitad de la longitud de Talbot, aparece una autoimagen pero desfasada medio periodo
 \item Usando las ecs. (7)-(8) analizar la intensidad y la fase del campo difractado por un objeto periódico compuesto de líneas blancas (transparentes) y negras (opacas) alternadas de la misma anchura, a una distancia $z=\flatfrac{ZT}{4}$
-
-\item Justifique el procedimiento seguido para determinar la distancia de Talbot y el periodo de la red y exponga los resultados.
-
-\item ¿Las imágenes observadas siempre son periódicos? \\¿La respuesta está de acuerdo con la teoría?
+En un cuarto del valor de la longitud de Talbot, la autoimagen se reduce a la mitad y aparece con la mitad del periodo de la red
+\item Justifique el procedimiento seguido para determinar la distancia de Talbot y el periodo de la red y exponga los resultados.\\
+Cuando una onda plana incide sobre una red de difracción periódica, la imagen de la red se repite a distancias regulares lejos del plano de la misma. Esta es la denominada distancia de talbot, en la cual vamos a observar imágenes espejo de la imagen de referencia. Lord Rayleigh demostró que el efecto Talbot era una consecuencia natural de la difracción de Fresnel.
+\item ¿Las imágenes observadas siempre son periódicos? ¿La respuesta está de acuerdo con la teoría?
 A distancias mayores a las de talbot mencionadas aparecen otras autoimágenes que no conservan su periodicidad axial.
 \end{enumerate}
 
@@ -222,6 +222,7 @@ CUESTIONES:
     \item ¿Qué valores d1 y d2 son adecuados para la observación del espectro de Fourier?
     \item ¿El espectro de la red está de acuerdo con la teoría (véanse los resultados del problema 1.6.)?
     \item Justifique el procedimiento seguido para determinar el periodo de la red y exponga los resultados.
+    El espectro de onda plana es un espectro continuo de ondas planas uniformes y hay un componente de onda plana en el espectro para cada punto tangente en el frente de fase de campo lejano. La amplitud de ese componente de onda plana sería la amplitud del campo óptico en ese punto tangente. Nuevamente, esto es cierto solo en el campo lejano, es por lo cual observamos las imágenes resultantes de la transformada de fourier de acuerdo a la naturaleza de la imagen en cuestión. Y es por tanto que el factor de escala de la TF depende de la distancia.
     \item ¿Es posible registrar el espectro de Fourier colocando un objeto detrás de la lente?
 \end{enumerate}
 
@@ -274,6 +275,7 @@ CUESTIONES:
 \end{enumerate}
 
 \section{Conclusiones}
+Se logra obtener una distancia de talbot experimental lo mas precisa posibles no obstante  una meta para el futuro es entender cómo se pueden hacer mediciones más precisas y de esta manera disminuir los errores experimentales en la difracción de campo cercano.
 
 %%%%%%%%%% If using BibTeX:
 \bibliography{bibliography}
