--- a/report2.tex
+++ b/report2.tex
@@ -107,29 +107,30 @@ Se registraron las imágenes y las distancias donde se observaron,
 \begin{center}
     \begin{subfigure}[t]{0.45\textwidth}\centering
         \includegraphics[width=\textwidth]{/parte2-talbot/4.9cm-talbot7.png}
-        \caption{ Talbot a distancia 1}
+        \caption{ Talbot a distancia 1 (18cm)}
         \label{fig:talbot1}	
     \end{subfigure}
 	\hfill
 	\begin{subfigure}[t]{0.45\textwidth}\centering
 		\includegraphics[width=\textwidth]{/parte2-talbot/23.9-talbot.png}
-        \caption{Talbot a distancia 2}
+        \caption{Talbot a distancia 2 (36cm)}
         \label{fig:talbot2}
 	\end{subfigure}
 	\\
 	\begin{subfigure}[t]{0.45\textwidth}\centering
 		\includegraphics[width=\textwidth]{/parte2-talbot/42.2-talbot.png}
-        \caption{ Talbot a distancia 3}
+        \caption{ Talbot a distancia 3 (54cm)}
         \label{fig:talbot3}
 	\end{subfigure}
 	\hfill
 	\begin{subfigure}[t]{0.45\textwidth}\centering
 		\includegraphics[width=\textwidth]{/parte2-talbot/54.8-2a-talbot.png}
-        \caption{ Talbot a distancia 4}
+        \caption{ Talbot a distancia 4 (73cm)}
         \label{fig:talbot4}
 	\end{subfigure}
 	
 \caption{Posiciones de contraste máximo (\ref{fig:talbot2}, \ref{fig:talbot4}) y mínimo (\ref{fig:talbot1}, \ref{fig:talbot3})%
+Se ve en estas fotos como entre \ref{fig:talbot2} y \ref{fig:talbot4} las posiciones tiene un shift de medio periodo.
 	}
 	\label{fig:alltalbot}
 \end{center}
@@ -152,7 +153,7 @@ Distancia de Talbot:
         \label{tab:dtalbot}
     \end{table}
 Periodo de la red:
-d=\sqrt{\flatfrac{Z * \lambda}{2}}
+$d=\sqrt{\flatfrac{Z *\cdot \lambda}{2}}$
 Cuando una onda plana incide sobre una red de difracción periódica, la imagen de la red se repite a distancias regulares lejos del plano de la misma
 
 \begin{table}[h] % h indica que queremos posicionar la tabla Here
@@ -230,32 +231,32 @@ CUESTIONES:
 \subsection{Filtrado óptico}
 Se obtienen los siguientes resultados:
 
-%\begin{figure}[hptb]
-%\begin{center}
-%    \begin{subfigure}[t]{0.45\textwidth}\centering
-%        \includegraphics[width=\textwidth]{/parte4-filtrado/4f-pic-2ocm-diafragm-10cm-camera-letters-diafragma_y_punto-pasabanda.png}
-%    \caption{que es }
-%    \label{fig:filtrado1}
-%   \end{subfigure}
-%	\begin{subfigure}[t]{0.45\textwidth}\centering
-%		\includegraphics[width=\textwidth]{/parte4-filtrado/4f-pic-2ocm-diafragm-10cm-camera-letters-high-frequency-almost-x.png}
+\begin{figure}[hptb]
+\begin{center}
+    \begin{subfigure}[t]{0.45\textwidth}\centering
+        \includegraphics[width=\textwidth]{parte4-filtrado/4f-pic-2ocm-diafragm-10cm-camera-letters-diafragma_y_punto-pasabanda.png}
+    \caption{que es }
+    \label{fig:filtrado1}
+   \end{subfigure}
+	\begin{subfigure}[t]{0.45\textwidth}\centering
+		\includegraphics[width=\textwidth]{parte4-filtrado/4f-pic-2ocm-diafragm-10cm-camera-letters-high-frequency-almost-x.png}
    % \caption{que es }
-%    \label{fig:filtrado2}
-%	\end{subfigure}
-%	\begin{subfigure}[t]{0.45\textwidth}\centerng
-%		\includegraphics[width=\textwidth]{/parte4-filtrado/4f-pic-2ocm-diafragm-10cm-camera-letters-high-frequency-dot-down.png}
- %   \caption{que es}
- %  \label{filtrado3}
-%	\end{subfigure}
-%	\hfill
-%	\begin{subfigure}[t]{0.45\textwidth}\centering
-%		\includegraphics[width=\textwidth]{/parte4-filtrado/4f-pic-2ocm-diafragm-10cm-camera-letters-high-frequency-dot-right-a-bit-down.png}
- % \caption{que es }
- %	\end{subfigure}
-%	\caption{que es}
-%	\label{fig:filt}
-%\end{center}
-%\end{figure}
+    \label{fig:filtrado2}
+	\end{subfigure}
+	\begin{subfigure}[t]{0.45\textwidth}\centering
+		\includegraphics[width=\textwidth]{parte4-filtrado/4f-pic-2ocm-diafragm-10cm-camera-letters-high-frequency-dot-down.png}
+    \caption{que es}
+   \label{fig:filtrado3}
+	\end{subfigure}
+	\hfill
+	\begin{subfigure}[t]{0.45\textwidth}\centering
+		\includegraphics[width=\textwidth]{parte4-filtrado/4f-pic-2ocm-diafragm-10cm-camera-letters-high-frequency-dot-right-a-bit-down.png}
+  \caption{que es }
+ 	\end{subfigure}
+	\caption{que es}
+	\label{fig:filtrado4}
+\end{center}
+\end{figure}
 
 CUESTIONES:
 \begin{enumerate}
